<resources>
    <string name="app_name">Refill Me</string>
    <string name="login_user">Entrar como usuário</string>
    <string name="login_adm">Entrar como administrador</string>
    <string name="back">Voltar</string>
    <string name="search">Buscar postos</string>
    <string name="search_location">Localização</string>
    <string name="search_radius">Raio da busca</string>
    <string name="search_fuel">Combustível</string>
    <string name="search_gas">Gasolina</string>
    <string name="search_gas_additive">Aditivada</string>
    <string name="search_ethanol">Etanol</string>
    <string name="search_diesel">Diesel</string>
    <string name="search_ok">Buscar</string>
    <string name="search_clean">Limpar campos</string>
    <string name="search_goto">Abrir com o Maps</string>
    <string name="update_name">Nome</string>
    <string name="update_address">Endereço</string>
    <string name="update_gas_price">Preço gasolina</string>
    <string name="update_gas_ad_price">Preço gasolina aditivada</string>
    <string name="update_ethanol_price">Preço Etanol</string>
    <string name="update_diesel_price">Preço diesel</string>
    <string name="update_upload_picture">Carregar foto</string>
    <string name="update_pick_location">Escolher localização</string>
    <string name="update">Atualizar</string>
    <string name="update_title">Atualizar posto</string>
    <string name="register">Cadastrar posto</string>
    <string name="register_title">Cadastrar posto</string>

    <string-array name="search_radius_options">
        <item>1 KM</item>
        <item>3 KM</item>
        <item>5 KM</item>
        <item>10 KM</item>
        <item>15 KM</item>
    </string-array>

</resources>
