<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:contentInsetEnd="0dp"
    android:contentInsetLeft="0dp"
    android:contentInsetRight="0dp"
    android:contentInsetStart="0dp"
    android:padding="0dp"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:theme="@style/AppTheme"
    app:contentInsetEnd="0dp"
    app:contentInsetLeft="0dp"
    app:contentInsetRight="0dp"
    app:contentInsetStart="0dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorIcons"
                android:elevation="2dp"
                android:padding="5dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="5dp"
                    android:text="@string/update_upload_picture"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <EditText
                    android:id="@+id/editTex9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorIcons"
                android:elevation="2dp"
                android:layout_marginTop="10dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="5dp"
                    android:text="@string/update_name"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorIcons"
                android:elevation="2dp"
                android:padding="5dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="5dp"
                    android:text="@string/update_address"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <TextView
                    android:id="@+id/editTex4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:text="..." />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorIcons"
                android:elevation="2dp"
                android:padding="5dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="5dp"
                    android:text="@string/update_pick_location"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <EditText
                    android:id="@+id/editTex10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorIcons"
                android:elevation="2dp"
                android:padding="5dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="5dp"
                    android:text="@string/update_gas_price"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <EditText
                    android:id="@+id/editTex5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorIcons"
                android:elevation="2dp"
                android:padding="5dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="5dp"
                    android:text="@string/update_gas_ad_price"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <EditText
                    android:id="@+id/editTex6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorIcons"
                android:elevation="2dp"
                android:padding="5dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="5dp"
                    android:text="@string/update_ethanol_price"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <EditText
                    android:id="@+id/editTex7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorIcons"
                android:elevation="2dp"
                android:padding="5dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="5dp"
                    android:text="@string/update_diesel_price"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <EditText
                    android:id="@+id/editTex8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

            </LinearLayout>

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:height="50dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </ScrollView>

</android.support.v7.widget.Toolbar>